--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<div class="container">
 		<h1>ROCK, PAPER, SCISSORS!<i class="fa-regular fa-hand-scissors"></i></h1>
 		<div id="buttons">
-			<button type="button" id="button-rock" class="button">Kamień</button>
-      <button type="button" id="button-paper" class="button">Papier</button>
-      <button type="button" id="button-scissors" class="button">Nożyce</button>
+			<button type="button" id="button-rock" class="button">Rock</button>
+      <button type="button" id="button-paper" class="button">Paper</button>
+      <button type="button" id="button-scissors" class="button">Scissors</button>
 		</div>
 	  <div id="messages" class="messages"></div>
 	</div>
